A3/HL.java
/* Generated By:JJTree&JavaCC: Do not edit this line. HL.java */
public class HL/*@bgen(jjtree)*/implements HLTreeConstants, HLConstants {/*@bgen(jjtree)*/
  protected static JJTHLState jjtree = new JJTHLState();

  static final public SimpleNode start() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD:
    case SUB:
    case LPAREN:
    case FOR:
    case FOREACH:
    case FUN:
    case IF:
    case PRINT:
    case RETURN:
    case STOP:
    case VAR:
    case WHILE:
    case X:
    case INTEGER:
    case BOOLEAN:
    case IDENTIFIER:
      S();
     {if (true) return (SimpleNode) (jjtree.popNode());}
      break;
    case 0:
      jj_consume_token(0);
            {if (true) throw new ParseException("End of File.");}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void S() throws ParseException {
    if (jj_2_1(2147483647)) {
      id_statement();
    } else if (jj_2_2(2147483647)) {
      expression();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void id_statement() throws ParseException {
    if (jj_2_3(2)) {
      fn_call();
      jj_consume_token(SEMICOL);
    } else if (jj_2_4(2)) {
      assignment();
      jj_consume_token(SEMICOL);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FOR:
      case FOREACH:
      case FUN:
      case IF:
      case PRINT:
      case RETURN:
      case STOP:
      case VAR:
      case WHILE:
        statement();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      var_decl();
      jj_consume_token(SEMICOL);
      break;
    case FUN:
      fn_decl();
      jj_consume_token(SEMICOL);
      break;
    case IF:
      jj_consume_token(IF);
      if_stat();
      jj_consume_token(FI);
      jj_consume_token(SEMICOL);
      break;
    case FOR:
      for_stat();
      jj_consume_token(SEMICOL);
      break;
    case FOREACH:
      foreach_stat();
      jj_consume_token(SEMICOL);
      break;
    case WHILE:
      while_stat();
      jj_consume_token(SEMICOL);
      break;
    case STOP:
      stop_stat();
      jj_consume_token(SEMICOL);
      break;
    case PRINT:
      print_stat();
      jj_consume_token(SEMICOL);
      break;
    case RETURN:
      return_stat();
      jj_consume_token(SEMICOL);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void var_decl() throws ParseException {
                   /*@bgen(jjtree) var_decl */
  ASTvar_decl jjtn000 = new ASTvar_decl(JJTVAR_DECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(VAR);
      indent_list();
      type_decl();
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void indent_list() throws ParseException {
                      /*@bgen(jjtree) indent_list */
  ASTindent_list jjtn000 = new ASTindent_list(JJTINDENT_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
  ASTidentlist jjtn001 = new ASTidentlist(JJTIDENTLIST);
  boolean jjtc001 = true;
  jjtree.openNodeScope(jjtn001);
      try {
        Identifier();
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_1;
          }
          jj_consume_token(COMMA);
          Identifier();
        }
      } catch (Throwable jjte001) {
  if (jjtc001) {
    jjtree.clearNodeScope(jjtn001);
    jjtc001 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte001 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte001;}
  }
  if (jjte001 instanceof ParseException) {
    {if (true) throw (ParseException)jjte001;}
  }
  {if (true) throw (Error)jjte001;}
      } finally {
  if (jjtc001) {
    jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
  }
      }
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void type_decl() throws ParseException {
    jj_consume_token(AS);
    type();
  }

  static final public void type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    ASTINT jjtn001 = new ASTINT(JJTINT);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(INT);
      } finally {
    if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
      break;
    case BOOL:
                 ASTBOOL jjtn002 = new ASTBOOL(JJTBOOL);
                 boolean jjtc002 = true;
                 jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(BOOL);
      } finally {
                 if (jjtc002) {
                   jjtree.closeNodeScope(jjtn002, true);
                 }
      }
      break;
    case POLYN:
                                ASTPOL jjtn003 = new ASTPOL(JJTPOL);
                                boolean jjtc003 = true;
                                jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(POLYN);
      } finally {
                                if (jjtc003) {
                                  jjtree.closeNodeScope(jjtn003, true);
                                }
      }
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void fn_decl() throws ParseException {
                  /*@bgen(jjtree) fn_decl */
  ASTfn_decl jjtn000 = new ASTfn_decl(JJTFN_DECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FUN);
      Identifier();
      jj_consume_token(LPAREN);
      param_decls();
      jj_consume_token(RPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AS:
        type_decl();
        body();
        break;
      default:
        jj_la1[5] = jj_gen;
                                                                                                     ASTNOTHING jjtn001 = new ASTNOTHING(JJTNOTHING);
                                                                                                     boolean jjtc001 = true;
                                                                                                     jjtree.openNodeScope(jjtn001);
        try {
          body();
        } catch (Throwable jjte001) {
                                                                                                     if (jjtc001) {
                                                                                                       jjtree.clearNodeScope(jjtn001);
                                                                                                       jjtc001 = false;
                                                                                                     } else {
                                                                                                       jjtree.popNode();
                                                                                                     }
                                                                                                     if (jjte001 instanceof RuntimeException) {
                                                                                                       {if (true) throw (RuntimeException)jjte001;}
                                                                                                     }
                                                                                                     if (jjte001 instanceof ParseException) {
                                                                                                       {if (true) throw (ParseException)jjte001;}
                                                                                                     }
                                                                                                     {if (true) throw (Error)jjte001;}
        } finally {
                                                                                                     if (jjtc001) {
                                                                                                       jjtree.closeNodeScope(jjtn001, true);
                                                                                                     }
        }
      }
      jj_consume_token(NUF);
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void param_decls() throws ParseException {
                      /*@bgen(jjtree) param_decls */
  ASTparam_decls jjtn000 = new ASTparam_decls(JJTPARAM_DECLS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      param_decl();
      label_2:
      while (true) {
        if (jj_2_5(2)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(COMMA);
        param_decl();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void param_decl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      Identifier();
      type_decl();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
  }

  static final public void body() throws ParseException {
               /*@bgen(jjtree) body */
  ASTbody jjtn000 = new ASTbody(JJTBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FOR:
        case FOREACH:
        case FUN:
        case IF:
        case PRINT:
        case RETURN:
        case STOP:
        case VAR:
        case WHILE:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        id_statement();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void assignment() throws ParseException {
                     /*@bgen(jjtree) assignment */
  ASTassignment jjtn000 = new ASTassignment(JJTASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Identifier();
      jj_consume_token(ASSIGN);
      arithm();
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void if_stat() throws ParseException {
                 /*@bgen(jjtree) if_stat */
  ASTif_stat jjtn000 = new ASTif_stat(JJTIF_STAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_6(2)) {
        fn_call();
      } else if (jj_2_7(2)) {
        logical_condition();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(THEN);
      clause();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELIF:
        jj_consume_token(ELIF);
        if_stat();
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      if (jj_2_8(2)) {
        jj_consume_token(ELSE);
        clause();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void elifs() throws ParseException {
    label_4:
    while (true) {
      if (jj_2_9(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(ELIF);
      logical_condition();
      jj_consume_token(THEN);
      clause();
    }
  }

  static final public void clause() throws ParseException {
                /*@bgen(jjtree) clause */
  ASTclause jjtn000 = new ASTclause(JJTCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      body();
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void for_stat() throws ParseException {
                   /*@bgen(jjtree) for_stat */
  ASTfor_stat jjtn000 = new ASTfor_stat(JJTFOR_STAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOR);
      Identifier();
      jj_consume_token(FROM);
      arithm();
      jj_consume_token(TO);
      arithm();
      label_5:
      while (true) {
        if (jj_2_10(2)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(BY);
        arithm();
      }
      jj_consume_token(DO);
      body();
      jj_consume_token(OD);
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void foreach_stat() throws ParseException {
                       /*@bgen(jjtree) foreach_stat */
  ASTforeach_stat jjtn000 = new ASTforeach_stat(JJTFOREACH_STAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOREACH);
      Identifier();
      jj_consume_token(IN);
      arithm();
      jj_consume_token(DO);
      body();
      jj_consume_token(OD);
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void while_stat() throws ParseException {
                     /*@bgen(jjtree) while_stat */
  ASTwhile_stat jjtn000 = new ASTwhile_stat(JJTWHILE_STAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      logical_condition();
      jj_consume_token(DO);
      body();
      jj_consume_token(OD);
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void fn_call() throws ParseException {
                  /*@bgen(jjtree) fn_call */
  ASTfn_call jjtn000 = new ASTfn_call(JJTFN_CALL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Identifier();
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
      case SUB:
      case LPAREN:
      case X:
      case INTEGER:
      case BOOLEAN:
      case IDENTIFIER:
        parameters();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void parameters() throws ParseException {
                     /*@bgen(jjtree) parameters */
  ASTparameters jjtn000 = new ASTparameters(JJTPARAMETERS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      arithm();
      label_6:
      while (true) {
        if (jj_2_11(2)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(COMMA);
        arithm();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void stop_stat() throws ParseException {
                    /*@bgen(jjtree) stop_stat */
  ASTstop_stat jjtn000 = new ASTstop_stat(JJTSTOP_STAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STOP);
      Identifier();
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void return_stat() throws ParseException {
                      /*@bgen(jjtree) return_stat */
  ASTreturn_stat jjtn000 = new ASTreturn_stat(JJTRETURN_STAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ADD:
        case SUB:
        case LPAREN:
        case X:
        case INTEGER:
        case BOOLEAN:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_7;
        }
        arithm();
      }
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void print_stat() throws ParseException {
                     /*@bgen(jjtree) print_stat */
  ASTprint_stat jjtn000 = new ASTprint_stat(JJTPRINT_STAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRINT);
      jj_consume_token(LPAREN);
      print_paren();
      label_8:
      while (true) {
        if (jj_2_12(2)) {
          ;
        } else {
          break label_8;
        }
        jj_consume_token(COMMA);
        print_paren();
      }
      jj_consume_token(RPAREN);
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void print_paren() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      String();
      break;
    case ADD:
    case SUB:
    case LPAREN:
    case X:
    case INTEGER:
    case BOOLEAN:
    case IDENTIFIER:
      arithm();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void logical_condition() throws ParseException {
    or_condition();
  }

  static final public void or_condition() throws ParseException {
    and_condition();
    if (jj_2_13(2)) {
      jj_consume_token(OR);
      or_condition();
    } else {
      ;
    }
  }

  static final public void and_condition() throws ParseException {
    not_condition();
    if (jj_2_14(2)) {
      jj_consume_token(AND);
      and_condition();
    } else {
      ;
    }
  }

  static final public void not_condition() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      not_condition();
      if (jj_2_15(2)) {
        jj_consume_token(NOT);
        not_condition();
      } else {
        ;
      }
      break;
    case ADD:
    case SUB:
    case LPAREN:
    case X:
    case INTEGER:
    case BOOLEAN:
    case IDENTIFIER:
      condition();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void condition() throws ParseException {
    if (jj_2_16(2147483647)) {
      comparison();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        logical_condition();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }
